# dagma

./: .flake8  .pre-commit-config.yaml  .travis.yml  AUTHORS  Makefile  README.md  pyproject.toml
dagma/: __init__.py  dagma.py  file_io.py  hashing.py  node_decorators.py  nodes.py  runners.py  strings.py  util.py
dagma/decorators/: __init__.py  nodes.py
dagma/io/: __init__.py  pickle.py
dagma/nodes/: __init__.py  awaitable_value.py  compute.py
scripts/: versioning.py
tests/: test_dagma.py  test_decorator.py  test_file_hash.py  test_file_io.py  test_graph_gen.py  test_load_save.py  test_memcache_disable.py  test_node_pipelines.py  test_node_recompute.py  test_repr.py  test_var_node.py  test_version.py  utils.py
tests/decorator/: test_decorator.py
tests/end2end/: test_logistic_regression.py  test_node_pipelines.py  test_thread_runner.py
tests/test_nodes/: test_compute_node.py
tests/test_runners/: test_queue_runner.py
