[tool.poetry]
name = "dagma"
version = "0.1.0"
description = "A lightweight pipelining tool for computation."
authors = ["Casey Graff <caseyagraff@gmail.com>"]
license = 'BSD 2'
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"
pre-commit = "^2.1.1"
black = "^19.10b0"
mypy = "^0.761"
codecov = "^2.0.16"
flake8 = "^3.7.9"
click = "^7.0"
pytest-xdist = "^1.31.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
