[tool.poetry]
name = "dagma"
version = "0.1.1"
description = "A lightweight pipelining tool for computation."
authors = ["Casey Graff <caseyagraff@gmail.com>"]
license = 'BSD-2-Clause'
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-asyncio = "^0.17.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.8.1"
pre-commit = "^2.1.1"
black = "^19.10b0"
codecov = "^2.0.16"
flake8 = "^3.7.9"
click = "^7.0"
pytest-xdist = "^1.31.0"
pytest-watch = "^4.2.0"
pyright = "^0.0.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
